--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,12 @@
   <property name="build.dir" value="out"/>
   <property name="classes.dir" value="${build.dir}/classes"/>
   <property name="jar.dir" value="${build.dir}/jar"/>
+  <property name="lib.dir" value="lib"/>
   <property name="main-class" value="com.example.pr.app.Main"/>
+
+  <path id="classpath">
+    <fileset dir="${lib.dir}" includes="*.jar" erroronmissingdir="false"/>
+  </path>
 
   <target name="clean">
     <delete dir="${build.dir}"/>
@@ -16,14 +21,17 @@
   </target>
 
   <target name="compile" depends="prepare">
-    <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false"/>
+    <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false">
+      <classpath refid="classpath"/>
+    </javac>
   </target>
 
-  <target name="jar" depends="compile ">
+  <target name="jar" depends="compile">
     <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
       <manifest>
         <attribute name="Main-Class" value="${main-class}"/>
       </manifest>
+      <zipgroupfileset dir="${lib.dir}" includes="*.jar" erroronmissingdir="false"/>
     </jar>
   </target>
 
